{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 15,
  "lineage": "114d84c6-1da9-4b1a-795a-a3dd9bf827a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0340915939561e683",
            "arn": "arn:aws:ec2:eu-north-1:718307299153:elastic-ip/eipalloc-0340915939561e683",
            "domain": "vpc",
            "id": "eipalloc-0340915939561e683",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-63-121-54.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.121.54",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "eipalloc-0340915939561e683",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:internet-gateway/igw-0539a1d5074d7ae43",
            "id": "igw-0539a1d5074d7ae43",
            "owner_id": "718307299153",
            "region": "eu-north-1",
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "igw-0539a1d5074d7ae43",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0340915939561e683",
            "association_id": "eipassoc-068f7fdb71f39d119",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09e2688eb165d4207",
            "network_interface_id": "eni-004aebcde47f926d5",
            "private_ip": "10.0.1.180",
            "public_ip": "13.63.121.54",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c64e211e7260b2a",
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "nat-09e2688eb165d4207",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:route-table/rtb-04841b63b886e1502",
            "id": "rtb-04841b63b886e1502",
            "owner_id": "718307299153",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09e2688eb165d4207",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "rtb-04841b63b886e1502",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:route-table/rtb-068492997e87bc7e5",
            "id": "rtb-068492997e87bc7e5",
            "owner_id": "718307299153",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0539a1d5074d7ae43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "rtb-068492997e87bc7e5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b706e9577f2a360",
            "region": "eu-north-1",
            "route_table_id": "rtb-04841b63b886e1502",
            "subnet_id": "subnet-0bccadd3c9716b44e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "rtbassoc-03b706e9577f2a360",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d2401bd0a9f2bd9",
            "region": "eu-north-1",
            "route_table_id": "rtb-04841b63b886e1502",
            "subnet_id": "subnet-08da2772af835c951"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "rtbassoc-09d2401bd0a9f2bd9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b96d20e5e7f88d8d",
            "region": "eu-north-1",
            "route_table_id": "rtb-068492997e87bc7e5",
            "subnet_id": "subnet-08c64e211e7260b2a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "rtbassoc-0b96d20e5e7f88d8d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe88e935ce103b7f",
            "region": "eu-north-1",
            "route_table_id": "rtb-068492997e87bc7e5",
            "subnet_id": "subnet-0600e9c462a80864c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "rtbassoc-0fe88e935ce103b7f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:subnet/subnet-0bccadd3c9716b44e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bccadd3c9716b44e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718307299153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "subnet-0bccadd3c9716b44e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:subnet/subnet-08da2772af835c951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08da2772af835c951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "718307299153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "subnet-08da2772af835c951",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:subnet/subnet-08c64e211e7260b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c64e211e7260b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718307299153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "subnet-08c64e211e7260b2a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:subnet/subnet-0600e9c462a80864c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0600e9c462a80864c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "718307299153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "vpc_id": "vpc-06d551fea387915cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "subnet-0600e9c462a80864c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:718307299153:vpc/vpc-06d551fea387915cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a9ba0d77605b627",
            "default_route_table_id": "rtb-032f88b02fead19f7",
            "default_security_group_id": "sg-0d825c0a75c01a0e6",
            "dhcp_options_id": "dopt-066461db710351a9a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d551fea387915cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032f88b02fead19f7",
            "owner_id": "718307299153",
            "region": "eu-north-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "718307299153",
            "id": "vpc-06d551fea387915cd",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}